Fix responsiveness + remove nav on small screen sizes

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -11,7 +11,10 @@
   background-position: 50% 50%;
   background-size: contain;
 }
-
+//
+// #nav-cent {
+//   text-align: center;
+// }
 
 #name-header {
   text-align: center;
@@ -259,16 +262,16 @@ body.canvas-menu .nav-header {
   }
 }
 
-#navbar {
-  margin: 0 auto;
-}
-#i18_navbar {
-  min-width: 745px;
-  padding-top: 10px;
-}
-#i18_navbar li {
-  display: inline;
-}
+// #navbar {
+//   margin: 0 auto;
+// }
+// #i18_navbar {
+//   min-width: 65%;
+//   padding-top: 10px;
+// }
+// #i18_navbar li {
+//   display: inline;
+// }
 
 
 .btn-default {
@@ -2750,6 +2753,17 @@ body {
         padding-left: 0;
         border-radius: 4px;
       }
+      .navbar-nav {
+        width: 100%;
+        text-align: center;
+      }
+      .navbar-nav > li {
+        float: none;
+        display: inline-block;
+      }
+      .navbar-nav > li.navbar-right {
+        float: right !important;
+      }
     }
     .carousel-caption p {
       margin-bottom: 20px;
@@ -2765,7 +2779,7 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 766px) {
   .landing-page {
     .carousel-caption {
       left: 5%;
@@ -2785,6 +2799,7 @@ body {
       background-color: #fff;
       border-color: #fff;
       padding: 15px 0;
+      display: none;
       .navbar-nav > .active > a:focus {
         background: 0 0;
         color: inherit;
